--- a/_scss/hydrometer.scss
+++ b/_scss/hydrometer.scss
@@ -22,6 +22,7 @@ hydro-meter {
     pointer-events:none;
     display:block;
     margin: 0;
+    background-color:#EEE;
     
     counter-reset: val var(--value);
     
