--- a/_scss/hydrometer.css
+++ b/_scss/hydrometer.css
@@ -28,6 +28,7 @@ hydro-meter {
   pointer-events: none;
   display: block;
   margin: 0;
+  background-color: #EEE;
   counter-reset: val var(--value);
   height: calc(1px * var(--dimensions));
   width: calc(1px * var(--dimensions));
