--- a/_scss/micro-meter.scss
+++ b/_scss/micro-meter.scss
@@ -7,12 +7,13 @@
     */
     micro-meter {
         width: 100%;
+        min-width:150px;
         background: #ddd;
         height: 13px;
         line-height: 13px;
         border-radius: 10px;
         border: 1px solid #666;
-        margin-top: 1px;
+        margin-top: 2px;
         overflow: hidden;
         box-shadow: inset 3px 3px 3px #0006;
         position:relative;
