--- a/_scss/teammate-silhouette.scss
+++ b/_scss/teammate-silhouette.scss
@@ -73,12 +73,12 @@
             height: 157px;
             font: 14px Hind;
             text-align:center;
-            opacity:0.8;
+            opacity:0.95;
             padding-top:45px;
             line-height: 1.33;
             left:50%;
             top:0;
-            transform: translate(-50%, 92px);
+            transform: translate(-50%, calc(100% + 92px));
             background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 157'%3E%3Cdefs%3E%3Cfilter id='a' width='257' height='158' x='-1' y='-1' filterUnits='userSpaceOnUse'%3E%3CfeOffset dy='6' in='SourceAlpha'/%3E%3CfeGaussianBlur result='blurOut' stdDeviation='4'/%3E%3CfeFlood flood-color='%23000' result='floodOut'/%3E%3CfeComposite in='floodOut' in2='blurOut' operator='atop'/%3E%3CfeComponentTransfer%3E%3CfeFuncA type='linear'/%3E%3C/feComponentTransfer%3E%3CfeMerge%3E%3CfeMergeNode/%3E%3CfeMergeNode in='SourceGraphic'/%3E%3C/feMerge%3E%3C/filter%3E%3C/defs%3E%3Cg filter='url(%23a)'%3E%3Cpath fill='%23EEE' fill-rule='evenodd' stroke='%23918E8D' stroke-width='2' d='M25 32h73c15 0 22-13 29-20 7 7 15 20 29 20h73c4 0 8 4 8 8v84c0 4-4 8-8 8H25c-4 0-8-4-8-8V40c0-4 4-8 8-8z'/%3E%3C/g%3E%3C/svg%3E") no-repeat;
             overflow:hidden;
             max-height: 0;
@@ -94,11 +94,11 @@
             max-height:157px;
             color:#000;
             font-size:15px;
-            padding-top:92px;
-            transform: translate(-50%, -15px);
+            padding-top:45px;
+            transform: translate(-50%, 15px);
             transition: 0.35s all ease-in, 0.38s font-size, 0s filter;
             transition-delay: 0.85s;
-
+            z-index: 100;;
         }
 
     }
