--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -351,9 +351,9 @@ body body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
 
 .tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand:after { position: absolute; content: ""; left: -3px; top: 3px; height: 1px; width: 7px; background: #333; }
 
-#grouping { position: fixed; left: -1000000px; }
+#grouping { position: fixed; left: -1000000px;}
 
-#grouping + label { margin-top: -38px; z-index: 100; position: absolute; display: flex; justify-content: space-between; border-radius: 8px; width: 96px; border: 2px solid #aaa; background: linear-gradient(90deg, teal 50%, #ccc 51%); height: 36px; transition: 1s all ease-in-out; }
+#grouping + label { margin-top: 0; z-index: 100; position: absolute; display: flex; justify-content: space-between; border-radius: 8px; width: 96px; border: 2px solid #aaa; background: linear-gradient(90deg, teal 50%, #ccc 51%); height: 36px; transition: 1s all ease-in-out;  animation:2s fadeIn forwards 2s; opacity:0;}
 
 #grouping + label::before, #grouping + label::after { content: ''; display: inline-block; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' stroke='transparent' viewBox='0 0 64 48' height='32'%3E%3Cpath d='M11.4 0h41.2c3 0 6 1.5 8 3.5 2 2.1 3.3 5.3 3.4 8.5v24c0 3.2-1.4 6.4-3.3 8.5-2 2-5.1 3.4-8.1 3.5H11.4c-3 0-6-1.4-8-3.5-2-2-3.3-5.3-3.4-8.5V12c0-3.2 1.4-6.4 3.3-8.5 2-2 5.1-3.4 8.1-3.5zM5.1 5.2c-1.8 2-3 4.9-3.1 7.8v22C2 38 3.3 41 5.1 42.8 7 44.7 10 45.9 12.7 46h38.6c2.8 0 5.7-1.3 7.6-3.2 1.8-2 3-4.9 3.1-7.8V13c0-2.9-1.3-5.9-3.1-7.8A11.5 11.5 0 0051.3 2H12.7C9.9 2 7 3.3 5.1 5.2zm19.3 1a2.7 2.7 0 100 5.4 2.7 2.7 0 000-5.4m17.8 0a2.7 2.7 0 100 5.4 2.7 2.7 0 000-5.4m-9-2.5A2.7 2.7 0 1036 6.4c0-1.5-1.1-2.7-2.6-2.7m15.3 10l-.6-.1h-.2c-1.9.8-3.7 1.3-5.5 1.7a1 1 0 00-.7.7c-1.2 3.4-4.4 6.6-7.8 10-.1.1-.2.3-.6.3a1 1 0 01-.7-.3c-3.3-3.4-6.5-6.6-7.7-10-.2-.3-.4-.6-.7-.7-1.7-.3-3.6-1-5.5-1.6l-.3-.1-.5.1c-.2.2-.3.5-.3.8.3 2.8 1.4 5.5 3.4 8.4 1.9 2.8 4.3 5.3 6.7 7.7 4.4 4.5 8.6 8.7 9 13.6 0 .5.4.8.8.8h5.3c.4 0 .9-.3.9-.8V44c-.2-3.3-1.4-6.6-3.8-10l-1.6-2.2c-.2-.3-.2-.6 0-.8l.6-.5c2.4-2.4 4.8-5 6.7-7.7 2-2.9 3.1-5.6 3.4-8.4 0-.3 0-.5-.4-.8M27.7 34.5c-.2-.2-.3-.3-.6-.3-.4 0-.6.3-.7.4a19.8 19.8 0 00-3.5 9.6l.2.6c.2.2.4.3.7.3h5.1c.5 0 .8-.4.9-.8.1-1.5.6-3 1.4-4.6.3-.6.1-1.1 0-1.3a44 44 0 00-3.5-4m5.6-18.1l2.9-.1c.4 0 .8.4.8.8l-.1.3c-.2.6-1.2 2.6-3 4.4l-.6.2-.6-.2a13.8 13.8 0 01-3-4.4l-.1-.3c0-.4.3-.8.8-.8h2.9'/%3E%3C/svg%3E"); width: 43px; height: 32px; margin: 2px; }
 
@@ -456,3 +456,48 @@ div.tabulator-cell.tabulator-frozen.tabulator-frozen-left > a { color: teal; }
 .tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort=none] .tabulator-col-content .tabulator-col-sorter .tabulator-arrow { top: 20%; position: absolute; border: 5px solid teal; border-right: none; border-top-color: white; border-bottom-color: white; color: teal; opacity: 0.2; left: 0; right: unset; float: unset; }
 
 .tabulator .tabulator-footer .tabulator-calcs-holder, .tabulator .tabulator-header { border-top: 3px solid #0d7277 !important; border-bottom: 3px solid #0d7277 !important; }
+
+
+h1.loading {
+    font: bold 48px system-ui;
+    color: teal;
+    text-align: left;
+    display: -ms-flexbox;
+    display: flex;
+    align-content: center;
+    // justify-content: center;
+    align-items: center;
+    height: 50vh;
+    width:350px;
+    margin-left:calc(50% - 175px);
+
+    &::before {
+        content:'Loading Grid';
+        animation:1s loadingGrid infinite;
+    }
+}
+
+.tabulator-cell.hour-display.day-display, .tabulator-col-title.day-col-header {
+    width: 90px;
+    min-width: 90px;
+    max-width: 90px;
+}
+
+div#example-table {
+    max-width: 98%;
+    margin: 0 1% 0 0.5%;
+}
+
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes loadingGrid {
+    0% { content:'Loading Grid'; }
+    25% { content:'Loading Grid.'; }
+    50% { content:'Loading Grid..'; }
+    75%, 100% { content:'Loading Grid...'; }
+    
+}
