--- a/_scss/fdbmyadmin.scss
+++ b/_scss/fdbmyadmin.scss
@@ -13,8 +13,8 @@ body,
 main#app {
     width: 100vw;
     max-width: 100%;
-    min-height: 100vh;
-    height: 100%;
+    min-height: 95vh;
+    height: 95%;
     padding: 0;
     margin: 0;
 }
@@ -117,9 +117,12 @@ main#app {
 
             & ~ .table-viewer {
                 min-height: 300px;
+                height: fit-content;
+                max-height: 65vh;
                 border:1px solid black;
                 min-width: 100%;
                 overflow:auto;
+                margin-top:20px;
             }
         }
     }
@@ -794,3 +797,49 @@ div.tabulator-cell.tabulator-frozen.tabulator-frozen-left > a { color: teal; }
 }
 .editDialog::before {content: '';background: #0009;z-index: 9999998;position: fixed;top: 0;left: 0;right: 0;bottom: 0;display: block;width: 100%;height: 100%;}
 
+aside#importFilePicker {
+    display:none;
+
+    &.active {
+        background:white;
+        position:absolute;
+        top:30px;
+        left:20%;
+        width:60%;
+        height:100px;
+        z-index: 1000;
+        padding:40px 10px;
+        display:flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10px;
+        border:2px solid #AAA;
+        box-shadow: 0 10px 30px black;
+
+        button {
+            border:0 none;
+            width:32px;
+            height:32px;
+            position:absolute;
+            bottom:3px;
+            right: 3px;
+            background-color:transparent;
+        }
+
+        .performImport {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='%2332AC41' fill-rule='evenodd' d='M24 48.1a24 24 0 11.2-48 24 24 0 01-.2 48zm12.4-35.2c-.2-.8-.7-1.4-1.4-1.3-.5-.8-1-1-1.6-1-1 0-2 .6-2.6 1.5l-9 14.9-4.5-5.5a3 3 0 00-2.4-1.1c-.7 0-1.3.2-1.2.6-2 1-2.3 2.8-1.3 4.2l7.4 11.1a3 3 0 002.7 1.4c1 0 2-.5 3-1l10.7-21.5a3 3 0 00.2-2.3z'/%3E%3C/svg%3E");
+        }
+
+        .cancelImport {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='red' fill-rule='evenodd' d='M24 48.1a24 24 0 11.2-48 24 24 0 01-.2 48zM24 3a21 21 0 100 42 21 21 0 000-42zm13.2 29l-5.4 5.4-7.4-7.8-8.2 7.8-5.4-5.4 7.8-7.8-7.8-8 5.4-5.3 8.2 7.9 7.5-7.9 5.4 5.4-7.9 7.9 7.8 7.8zm-3-14.4l-3.6-3-6.2 6-7-6.3-3.5 3.3 6.6 6.6-6.6 6.5 3.6 3.6 6.9-6.6 6.2 6.5 4.4-3.5-7.4-6.5 6.5-6.6z'/%3E%3C/svg%3E");
+            right:38px
+        }
+
+        & + * {
+            opacity:0.1;
+        }
+    }
+}
