--- a/_scss/starport.scss
+++ b/_scss/starport.scss
@@ -1,12 +1,112 @@
-aside#starport {
+#starport {
     position:fixed;
     top:0;
     left:0;
     right:0;
     bottom:0;
-    width:100%;
-    height:100%;
+    max-width:100vw;
+    max-height:100vh;
     z-index: 999;
-    background:#000A;
+    background:#000E;
     padding:50px;
+    
+    iframe {
+        padding:20px;
+        border-radius: 20px;
+        box-shadow: 0 0 30px black, 0 20px 50px black;
+        position: fixed;
+        z-index: 9999999;
+        width:70vw;
+        height:70vh;
+        left:15vw;
+        top:15vh;
+        opacity:0.88;
+    }
+}
+// @import "compass/css3";
+
+$stars: 50;         // Number of start per layer
+$depth: 360;         // Depth between star layers
+$speed: 10s;          // Number of seconds to transition between layers
+$width: 2000;        // Width of the starfield
+$height: 2000;        // Height of the starfield
+
+html, body {
+  height: 100%;
+  // overflow: hidden;
+}
+body {
+  background: #000;
+  perspective: 540px;
+}
+.stars {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 2px;
+  z-index: 1000;
+  $box-shadow: ();
+  @for $i from 0 through $stars {
+    $box-shadow: $box-shadow, (random($width)-$width/2 + px) (random($height)-$height/2 + px) hsl(90,0,75+random(25));
+  }
+  box-shadow: $box-shadow;
+  animation: fly $speed linear infinite;
+  transform-style: preserve-3d;
+  
+  &:before, &:after {
+    content: "";
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    box-shadow: inherit;
+  }
+  &:before {
+    transform: translateZ(-$depth + px);
+    animation: fade1 $speed linear infinite;
+  }
+  &:after {
+    transform: translateZ(-$depth * 2 + px);
+    animation: fade2 $speed linear infinite;
+  }
+}
+
+@keyframes fly {
+  from {
+    transform: translateZ(0px);
+  }
+  to {
+    transform: translateZ($depth + px);
+  }
+}
+
+@keyframes fade1 {
+  from {
+    opacity: .5;
+  }
+  to {
+    opacity: 1;
+  }  
+}
+@keyframes fade2 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: .5;
+  }  
+}
+
+
+button.undock {
+  border:0 none;
+  width:48px;
+  height:48px;
+  position:absolute;
+  top:3px;
+  right: 3px;
+  background-color:#F005;
+  border-radius: 50%;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='red' fill-rule='evenodd' d='M24 48.1a24 24 0 11.2-48 24 24 0 01-.2 48zM24 3a21 21 0 100 42 21 21 0 000-42zm13.2 29l-5.4 5.4-7.4-7.8-8.2 7.8-5.4-5.4 7.8-7.8-7.8-8 5.4-5.3 8.2 7.9 7.5-7.9 5.4 5.4-7.9 7.9 7.8 7.8zm-3-14.4l-3.6-3-6.2 6-7-6.3-3.5 3.3 6.6 6.6-6.6 6.5 3.6 3.6 6.9-6.6 6.2 6.5 4.4-3.5-7.4-6.5 6.5-6.6z'/%3E%3C/svg%3E");
+
 }
