--- a/_scss/fdbmyadmin.scss
+++ b/_scss/fdbmyadmin.scss
@@ -802,32 +802,146 @@ aside#importFilePicker {
     display:none;
 
     &.active {
-        background:white;
-        position:absolute;
-        top:30px;
-        left:20%;
-        width:60%;
-        height:100px;
+        background: #AAA;
+        position: absolute;
+        top: 130px;
+        left: 5%;
+        width: 100%;
+        height: fit-content;
         z-index: 1000;
-        padding:40px 10px;
-        display:flex;
+        padding: 40px 20px;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: row;
         flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: center;
-        justify-content: space-evenly;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -ms-flex-line-pack: center;
+        align-content: flex-start;
+        -ms-flex-pack: space-evenly;
+        justify-content: flex-start;
+        -ms-flex-align: center;
         align-items: center;
         border-radius: 10px;
-        border:2px solid #AAA;
-        box-shadow: 0 10px 30px black;
+        border: 2px solid #666;
+        box-shadow: 0 10px 30px black, inset 10px 10px 10px #FFF9, inset -10px -10px 10px #0009;
+        max-width: 90%;
+        color: white;
+
+        & > #importFields {
+            min-width: 100%;
+            border: 1px solid white;
+            border-bottom:2px ridge #666;
+            border-top: 0 none;
+            min-height: 60px;
+            border-radius: 30px 30px 0 0;
+            background: #333;
+            box-shadow: inset 10px 10px 5px 5px #333, inset -10px 10px 5px 5px #333, inset 20px 20px 30px #fff3, inset -20px 20px 30px #fff3, 0 10px 10px black;
+            height: 60px;
+            line-height: 70px;
+            display: flex;
+            flex-wrap: nowrap;
+            flex-direction: row;
+            align-content: center;
+            justify-content: center;
+            align-items: flex-start;
+
+        }
+
+        & > label {
+            width: 250px;
+            padding: 0 0 0 30px;
+            border-right: 0 none;
+            border-bottom: 0 none;
+
+        }
+        
+        input#fileImporter {
+            width: calc(100% - 300px);
+            height: 60px;
+            line-height: 70px;
+            margin-left:20px;
+        }
+
+        .fileImporterDisplay {
+            min-width: 100%;
+            border: 1px solid white;
+            border-top: 0 none;
+            min-height: 250px;
+            border-radius: 0 0 30px 30px;
+            background:black;
+            box-shadow: inset 10px -10px 5px 5px #000, inset -10px -10px 5px 5px #000, inset 20px -20px 30px #fff2, inset -20px -20px 30px #fff2;
+            overflow:hidden;
+
+            #importLog {
+                padding:10px 20px 20px;
+                color:#0F0;
+                font-family: monospace;
+                font-size:16px;
+                width:calc(100% - 1px);
+                max-height: 70vh;
+                overflow: auto;
+                display:flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                align-content: stretch;
+                align-items: stretch;
+                justify-content: flex-start;
+
+                &::after {
+                    content:'';
+                    width:5px;
+                    height:12px;
+                    background-color:#0F0;
+                    display: inline-block;
+                    animation:1s cursor forwards infinite;
+                }
+
+                .stamps {
+                    width:100px;
+                }
+                .logs {
+                    width:calc(100% - 100px);
+
+                    b {
+                        animation:0.5s cursor forwards 5;
+                    }
+
+                    div {
+                        width:100%;
+                        display:flex;
+                        flex-direction: row;
+                        flex-wrap: nowrap;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        align-content: flex-start;
+
+                        span {
+                            display: inline-block;
+                            min-width: 100px;
+                            width: fit-content;
+                            padding:2px 5px;
+                            word-break: break-all;
+                            border-right:1px solid #0F02
+                        }
+                    }
+                }
+            }
+
+        }
 
         button {
-            border:0 none;
-            width:32px;
-            height:32px;
-            position:absolute;
-            bottom:3px;
-            right: 3px;
-            background-color:transparent;
+            width:36px;
+            max-width:36px;
+            height:36px;
+            display: inline-block;
+            vertical-align: middle;
+            margin:14px 0 0 0;
+            padding:0;
+            background-color:black;
+            border-radius: 50%;
+            border:2px solid black;
+            margin-right:5px;
         }
 
         .performImport {
@@ -836,11 +950,15 @@ aside#importFilePicker {
 
         .cancelImport {
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='red' fill-rule='evenodd' d='M24 48.1a24 24 0 11.2-48 24 24 0 01-.2 48zM24 3a21 21 0 100 42 21 21 0 000-42zm13.2 29l-5.4 5.4-7.4-7.8-8.2 7.8-5.4-5.4 7.8-7.8-7.8-8 5.4-5.3 8.2 7.9 7.5-7.9 5.4 5.4-7.9 7.9 7.8 7.8zm-3-14.4l-3.6-3-6.2 6-7-6.3-3.5 3.3 6.6 6.6-6.6 6.5 3.6 3.6 6.9-6.6 6.2 6.5 4.4-3.5-7.4-6.5 6.5-6.6z'/%3E%3C/svg%3E");
-            right:38px
         }
 
         & + * {
             opacity:0.1;
         }
     }
+}
+
+@keyframes cursor {
+    0%, 50% {opacity:0;}
+    51%, 100% {opacity:1;}
 }
