--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -501,3 +501,16 @@ div#example-table {
     75%, 100% { content:'Loading Grid...'; }
     
 }
+
+
+div > div.tabulator-col-title.day-col-header > b {
+    display: block;
+    height: 30px;
+    width: 100%;
+    line-height: 1;
+    background-repeat: no-repeat;
+    background-size: 40px 40px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 48 48'%3E%3Cpath fill='teal' d='M19 24c15-2 17 18 16 24-16 1-30-19-16-24zm-5 1c-5 4-3 11-1 13 0 1-7 4-13 3 0-18 14-16 14-16zm10 1c6 4 9 14 9 14 0-3-1-11-9-14zM2 39c1-9 4-12 10-13-5 0-10 2-10 13zm15-11l-2 3c3 8 14 14 14 14s-9-9-12-17z'/%3E%3C/svg%3E");
+    background-position-y: -10px;
+    text-align: right;
+}
